# spr_parser

./: README.md  pyproject.toml  test_spr.py
spr_parser/: __init__.py  parser.py
