[tool.poetry]
name = "spr_parser"
version = "0.1.0"
description = "Langchain runnable for parsing output encoding/decoding it in SPR format"
authors = ["Meir Michanie <meirm@riunx.com>"]
readme = "README.md"
keywords = ["openai", "langchain", "pydantic"]
homepage = "https://github.com/meirm/spr_parser"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.5.3"
langchain = "^0.1.0"
langchain_community = "^0.0.12"
langchain_core = "^0.1.11"

# Add classifiers
[metadata.classifiers]
license = "MIT"
license_file = "LICENSE"
description-file = "README.md"

